Modified error correction statistics

--- a/HW#4.ipynb
+++ b/HW#4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1376,9 +1376,9 @@
     "            if per_base_raw[i] != 0:\n",
     "                counter = Counter(per_base_raw[i])\n",
     "                most_common = counter.most_common(1)[0][0]\n",
-    "                if most_common != ref_seq[i]:\n",
+    "                if most_common != ref_seq[i] and most_common != 'N':\n",
     "                    data[0, 2] += 1\n",
-    "                else:\n",
+    "                elif most_common == ref_seq[i] and most_common != 'N':\n",
     "                    data[1, 2] += 1\n",
     "        elif per_base_corr[i] != 0:\n",
     "            if per_base_raw[i] != 0:\n",
@@ -1386,14 +1386,20 @@
     "                counter_corr = Counter(per_base_corr[i])\n",
     "                most_common_raw = counter_raw.most_common(1)[0][0]\n",
     "                most_common_corr = counter_corr.most_common(1)[0][0]\n",
-    "                if most_common_raw != ref_seq[i] and most_common_corr != ref_seq[i]:\n",
-    "                    data[0, 0] += 1\n",
-    "                elif most_common_raw != ref_seq[i] and most_common_corr == ref_seq[i]:\n",
-    "                    data[0, 1] += 1\n",
-    "                elif most_common_raw == ref_seq[i] and most_common_corr != ref_seq[i]:\n",
-    "                    data[1, 0] += 1\n",
-    "                elif most_common_raw == ref_seq[i] and most_common_corr == ref_seq[i]:\n",
-    "                    data[1, 1] += 1\n",
+    "                if most_common_raw != 'N' and most_common_corr == 'N':\n",
+    "                    if most_common_raw != ref_seq[i]:\n",
+    "                        data[0, 2] += 1\n",
+    "                    else:\n",
+    "                        data[1, 2] += 1\n",
+    "                elif most_common_raw != 'N' and most_common_corr != 'N':\n",
+    "                    if most_common_raw != ref_seq[i] and most_common_corr != ref_seq[i]:\n",
+    "                        data[0, 0] += 1\n",
+    "                    elif most_common_raw != ref_seq[i] and most_common_corr == ref_seq[i]:\n",
+    "                        data[0, 1] += 1\n",
+    "                    elif most_common_raw == ref_seq[i] and most_common_corr != ref_seq[i]:\n",
+    "                        data[1, 0] += 1\n",
+    "                    elif most_common_raw == ref_seq[i] and most_common_corr == ref_seq[i]:\n",
+    "                        data[1, 1] += 1\n",
     "    return (data / len(ref_seq)) * 100"
    ]
   },
@@ -1406,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1441,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1449,8 +1455,8 @@
      "output_type": "stream",
      "text": [
       "                  Error corr reads  Correct corr reads  Abscent corr reads\n",
-      "Error raw data             0.01075               0.000                 0.0\n",
-      "Correct raw data           0.48600              99.503                 0.0\n"
+      "Error raw data             0.00475               0.000              0.0060\n",
+      "Correct raw data           0.00050              99.503              0.4855\n"
      ]
     }
    ],
@@ -1484,7 +1490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
